--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,15 +1,15 @@
 name: eShopOnWeb Build and Test
-
+param sku string = 'S1' // The SKU of App Service Plan
 #Triggers (uncomment line below to use it)
-#on: [push, workflow_dispatch]
+#on: on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-NAME
+  RESOURCE-GROUP: RESOURCE-GROUP:rg-eshoponweb-westeurope
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
-  SUBSCRIPTION-ID: YOUR-SUBS-ID
-  WEBAPP-NAME: eshoponweb-webapp-NAME
+  SUBSCRIPTION-ID: c84d426f-3351-4e82-b238-fcc5a1648290
+  WEBAPP-NAME: eshoponweb-webapp-2312716354
 
 
 jobs:
